docs/08access-control/nginx-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sa
spec:
  containers:
  - image: nginx
    name: nginx
  # mysa ServiceAccount 사용
  serviceAccountName: mysa
