docs/08access-control/dont-leave-dev.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dont-leave-dev
  namespace: dev
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - to:
    - podSelector: {}
