docs/08access-control/in-out.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: in-out
  namespace: default
spec:
  podSelector: {}
  ingress: []
  egress:
  - {}
